# mammoth-lite

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: deploy_pages.yml
docs/: .gitignore  Makefile  conf.py  core_concepts.rst  getting_started.rst  index.rst  installation.rst  pyproject.toml  quickstart.rst
docs/_templates/: custom-base-template.rst  custom-module-template.rst
docs/api/: backbones.rst  datasets.rst  index.rst  models.rst  utils.rst
docs/examples/: basics.rst  custom_backbone.rst  custom_dataset.rst  custom_model.rst  index.rst
docs/tutorials/: first_continual_learning_experiment.rst  index.rst
examples/exercises/: der.ipynb  icarl.ipynb  lwf_mc.ipynb
examples/notebooks/: basics.ipynb  basics.py  create_a_backbone.ipynb  create_a_dataset.ipynb  create_a_model.ipynb
examples/solutions/: der.ipynb  icarl.ipynb  lwf_mc.ipynb
mammoth/: __init__.py  main.py
mammoth/backbone/: __init__.py
mammoth/datasets/: __init__.py  seq_cifar10.py
mammoth/datasets/utils/: continual_dataset.py
mammoth/models/: __init__.py  sgd.py
mammoth/models/utils/: __init__.py
mammoth/utils/: args.py  checkpoints.py  training.py
mammoth_lite/: __init__.py  main.py
mammoth_lite/backbone/: __init__.py  resnet.py
mammoth_lite/datasets/: __init__.py  seq_cifar10.py  seq_cub200.py
mammoth_lite/datasets/utils/: continual_dataset.py  denormalization.py
mammoth_lite/models/: __init__.py  rrr.py  sgd.py
mammoth_lite/models/rrr_utils/: __init__.py  explanations.py
mammoth_lite/models/utils/: __init__.py  continual_model.py
mammoth_lite/utils/: __init__.py  args.py  buffer.py  checkpoints.py  conf.py  evaluate.py  training.py  utils.py
tests/: conftest.py
