[project]
name = "mammoth-lite"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gitpython",
    "ipykernel>=6.29.5",
    "numpy",
    "six",
    "torch",
    "torchvision",
    "tqdm",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
name = "torch"

[tool.mypy]
mypy_path = "mammoth"
python_executable = '.venv/bin/python'

[tool.ty.src]
root = "./mammoth"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "pytest>=8.3.5",
    "types-six>=1.17.0.20250515",
    "types-tqdm>=4.67.0.20250516",
]

[tool.pytest]
minversion="6.0"
addopts="-ra"
testpaths="tests"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::FutureWarning",
    "ignore::Warning",
    "ignore::SyntaxWarning",
]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["E402", "F403"]
