[project]
name = "mammoth-lite"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gitpython",
    "ipykernel>=6.29.5",
    "numpy",
    "six",
    "torch",
    "torchvision",
    "tqdm",
]

[tool.setuptools.packages.find]
include = [
    "mammoth_lite"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.mypy]
mypy_path = "mammoth_lite"
python_executable = '.venv/bin/python'

[tool.ty.src]
root = "./mammoth_lite"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "pytest>=8.3.5",
    "types-six>=1.17.0.20250515",
    "types-tqdm>=4.67.0.20250516",
]

[tool.pytest]
minversion="6.0"
addopts="-ra"
testpaths="tests"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::FutureWarning",
    "ignore::Warning",
    "ignore::SyntaxWarning",
]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["E402", "F403"]
"*.ipynb" = ["E402", "F403"]